--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
     <style>
         body {
-            background-color: #dbe9fa; /* Light background color */
-            font-family: Arial, sans-serif; /* Font styling */
+            background-color: #dbe9fa;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
             display: flex;
             flex-direction: column;
-            align-items: center; /* Center content horizontally */
+            align-items: center;
         }
 
         h1 {
-            color: #333; /* Darker color for headings */
+            color: #333;
             margin-bottom: 10px;
         }
 
@@ -32,29 +32,57 @@
             display: flex;
             justify-content: space-between;
             width: 80%;
-            margin: 20px 0;
+            margin: 10px 0;
+        }
+
+        .container-2 {
+            padding-top: 15px;
+            padding-bottom: 15px;
+            width: 70%;
         }
 
         .graph {
             flex: 1;
             padding: 10px;
-            background-color: #f0f8ff; /* White background for graphs */
-            border-radius: 8px; /* Rounded corners */
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+            background-color: #f0f8ff;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         }
 
         .text-box {
+            display: flex;
+            flex-direction: column;
             flex: 1;
             padding: 20px;
             background-color: #f9f9f9;
             border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             margin-left: 20px;
         }
 
-        .text-box-left {
-            margin-right: 20px;
-            margin-left: 0;
+        .text-box-trans {
+            display: flex;
+            flex-direction: column;
+            flex: 1;
+            border-radius: 8px;
+            margin-left: 20px;
+        }
+
+        .small-box {
+            flex: 1;
+            height: 500px;
+            padding: 15px;
+            /* padding-top: 0px; */
+            background-color: #f9f9f9;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+
+        .big-box {
+            flex: 2;
+            padding: 10px;
+            /* background-color: #f9f9f9; */
+            border-radius: 8px;
         }
 
     </style>
@@ -63,21 +91,35 @@
 </head>
 
 <body>
-    <h1>Global Income Inequality</h1>
 
-    <!-- Container for the line graph and text box on the right -->
+    <h1 style="font-family: 'Times New Roman', Times, serif; font-size: 45px;">Global Income Inequality</h1>
+    <div class="container-2">
+        <p>Did you know that income inequality is one of the hottest topics shaping our world today? 🌍</P> 
+        <p>It’s all about how wealth is unevenly spread, both between countries and within them, and it affects us all! 🤯</p>
+        <p>In this poster, we’ll explore the fascinating relationship between income and human development, and how it impacts our daily lives!
+            We’ll also take a closer look at income distribution in Malaysia, revealing what’s really happening behind the numbers. 📊
+            Get ready to discover the surprising factors driving inequality and its impact on society! 🚀</p>
+    </div>
+
     <div class="container">
         <div id="line" class="graph"></div>
-        <div class="text-box">
-            <p>text box</p>
+        <div class="text-box-trans">
+            <!-- Small text box -->
+            <div class="small-box">
+                <p>The chart shows clear differences in average income between regions. Europe leads in economic 
+                    prosperity, while Africa faces major challenges with much lower income levels. Some regions, 
+                    like Asia and the Americas, are growing and improving, but others remain stagnant. 
+                    This highlights the need for focused economic policies to tackle these inequalities and help 
+                    the struggling regions.</p>
+            </div>
+            <div class="big-box">
+                
+            </div>
         </div>
     </div>
 
     <!-- Container for the waffle chart with the text box on the left -->
     <div class="container">
-        <div class="text-box text-box-left" style="max-height: 230px; width: 300px;">
-            <p>text box</p>
-        </div>
         <div id="waffle" class="graph"></div>
     </div>
 
@@ -85,15 +127,27 @@
         <div id="map" class="graph"></div>
     </div>
 
+    <div class="container-2" style="padding-top: 2px;">
+        <p>🌍</P> 
+    </div>
+
     <div class="container">
         <div id="bubble" class="graph"></div>
     </div>
 
+    <div class="container-2" style="padding-top: 2px;">
+        <p>🌍</P>
+    </div>
+    
     <div class="container">
         <div id="msia" class="graph"></div>
         <div class="text-box">
             <p>text box</p>
         </div>
+    </div>
+
+    <div class="container">
+        <p>jlyx</p>
     </div>
 
 </body>
