--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             flex-direction: column;
             flex: 1;
             border-radius: 8px;
+            padding-top: 10px;
         }
 
         .text-box-trans {
@@ -162,7 +163,7 @@
         
     </div>
     
-    <h1 style="font-size: 30px; color: #616161; margin-top: 30px;">Income Levels and Inequality Across Countries</h1>
+    <h1 style="font-size: 30px; color: #616161; margin-top: 30px;">The State of Income Inequality in Malaysia</h1>
 
     <div class="container">
         <div id="msia" class="graph"></div>
@@ -176,7 +177,7 @@
             <p>Moreover, <i>Sabah's highest poverty rate</i> highlights that even in regions with <strong>higher average incomes</strong>, many individuals still <strong>live below the poverty line.</strong></p>
         </div>
     </div>
-    <br></br>
+
     <div class="container">
         <div class="dataset-box">
             <p style="font-size: small; margin: 2px 0;">Author: Lau Yun Xian 33283567</p>
